<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="100px"
    tools:context=".Resultado">

    <TableRow android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/imgSigno"
            android:layout_width="800px"
            android:layout_height="800px"
            app:srcCompat="@drawable/aquario" />
    </TableRow>

    <TableRow android:gravity="center_horizontal">

        <TextView
            android:id="@+id/textSigno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
    </TableRow>

    <TableRow android:gravity="center_horizontal">

        <TextView
            android:id="@+id/textData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dia"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
    </TableRow>

    <TableRow android:gravity="center_horizontal">

        <Button
            android:id="@+id/buttonVoltar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/voltar" />
    </TableRow>

</TableLayout>