<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="450dp"
        android:layout_height="474dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="-42dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="271dp"
        app:srcCompat="@drawable/logoazul" />

    <Spinner
        android:id="@+id/spinnerDia"
        android:layout_width="259dp"
        android:layout_height="41dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="79dp"
        android:layout_marginEnd="73dp"
        android:layout_marginBottom="186dp" />

    <TextView
        android:id="@+id/textDia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="80dp"
        android:layout_marginTop="355dp"
        android:layout_marginEnd="73dp"
        android:text="@string/dia" />

    <TextView
        android:id="@+id/textMes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="79dp"
        android:layout_marginTop="462dp"
        android:layout_marginEnd="70dp"
        android:text="@string/mes" />

    <Spinner
        android:id="@+id/spinnerMes"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="81dp"
        android:layout_marginTop="482dp"
        android:layout_marginEnd="68dp" />

    <Button
        android:id="@+id/buttonEnviar"
        android:layout_width="259dp"
        android:layout_height="56dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="82dp"
        android:layout_marginTop="545dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="2dp"
        android:text="@string/botao" />

</RelativeLayout>